--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ h1{
     text-align: center;
 }
 .msg{
-    width: 23%;
-    margin-left: 500px;
+    width: 32%;
+    margin: 0 0 0 34%;
     padding: 10px 20px;
 }
 .msg h5{
@@ -88,8 +88,8 @@ h1{
     text-decoration: none;
     background-image: linear-gradient(45deg, lightSalmon, rgb(216, 35, 120));
     width: 60%;
-    margin-left: 250px;
-    padding: 10px 20px;
+    margin:0 0 20% 20%;
+    padding-left: 10px 20px;
     border-radius: 5px;
     color: white;
     font-weight: 700;
